add package lock json

--- a/package.json
+++ b/package.json
@@ -6,6 +6,6 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Rodrigo Bonzerr S. Lopez",
+  "author": "Edsel C. Duran",
   "license": "ISC"
 }
